# opencode-companion

./: .gitignore  README.md  opencode-companion.spec  pyproject.toml  run_companion.py
agents/: slime.md
agents/memory/: profile.md
companion/: __init__.py  _paths.py  core.py  desktop.py  main.py  memory.py  opencode.py  permits.py  persona.py  sprites.py  theme.py  voice.py
companion/opencode_plugin/: permission_bridge.js
scripts/: _smoke_ui.py  build_exe.py  gen_slime.py
stt/: __init__.py  _download.py  _engine.py
tests/: test_core.py  test_memory.py  test_opencode.py
